--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,6 @@
         <title>тренажёр</title>
     </head>
     <body>
-        <a href="secret.html"><img src="images/2022-09-22_18-36-18.png" width="125px" align="right"></a>
         <ul>
             <li><a href="5.html">Теория: 5 класс</a></li>
             <li><a href="6.html">Теория: 6 класс</a></li>
@@ -85,205 +84,200 @@
                 </tr>
             </tbody>
         </table>
-        <div>
-                <p>
-                    <script>
-                        document.write('1. Сколько стоит первый тариф?')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write('2. За сколько рублей можно получить ' + zzz + ' минут')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write('3. Сколько в сумме минут и гигабайт в ' + question3 + ' тарифе')
-                    </script>
-                </p>
-                <input id="answer2" placeholder="введите ответ">
-                <br/>
-                <br/>
-                <img src="images/2022-03-31_16-07-47.png" class=".img" align="center" width="100%" height="75%">
-                <p>
-                    <script>
-                        document.write(' 4. Ребёнкок весит ' + realyears + ' килограмм(а), назовите его максимальную ' + dosa + ' дозу ' + mera)
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 5. Найдите значение выражения (' + sss + '*10^' + ssz + ')*(' + ssv + '*10^' + ssz + ') и округлите до десятых')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 6. Найдите значение выражения ' + ddd + ' + ' + fff)
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 7. Упростите выражение: ' + aab + 'x * (' + bbc + 'x + ' + ccd + ')')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 8. Найдите дискриминант: x^2 + ' + lsd + 'x + ' + ssd + ' = 0')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 9. Определите вероятность того что Витя наугад возьмёт жёлтый обруч, когда жёлтых - ' + yel +', зелёных - ' + gre + ', синих - ' + blu)
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 10. Сумму градусов всех углов считают по формуле 180*(h-2), где h равен количеству сторон, какая сумма углов у многоугольника, у которого ' + sto + ' сторон(ы)')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 11. Найдите корень у ' + que)
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>                    
-                    <script>
-                        document.write(' 12. Ваня, Миша, Алик и Вадим ловили рыбу. Оказалось, что количества рыб, пойманных каждым из них, образуют в указанном порядке арифметическую прогрессию. Если бы Алик поймал столько же рыб, сколько Вадим, а Вадим поймал бы на 12 рыб больше, то количества рыб, пойманных юношами, образовали бы в том же порядке геометрическую прогрессию. Сколько рыб поймал Миша?')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 13. Биссектрисы углов A и B треугольника ABC пересекаются в точке O. Найдите ABO, если  A = ' + please + ',а B =' + away)
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 14. В холодильник положили предмет с температурой ' + osn + ' через минуту его достали и его температура снизилась на ' + plu + '. Какая температура у него будет через ' + min + ' минут?')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 15. В треугольнике DEF DE=DF, внешний угол при вершине F равен ' + tre + '. Найдите угол C')
-                    </script>
-                </p>
-                <input autocomplete="off" autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 16. На прямой AB взята точка M. Луч MD — биссектриса угла CMB. Известно, что ∠DMC=' + help + '°. Найдите угол CMA. Ответ дайте в градусах.')
-                    </script>
-                </p>
-                <input autocomplete="off" autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 17. В окружность вписан равносторонний ' + old + '-иугольник. Найдите величину угла ABC.')
-                    </script>
-                </p>
-                <input autocomplete="off" autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 18. Найдите площадь треугольника ABC если у него угол A равен 90 градусов, а сторона AB = ' + str + ' см, BC = ' + str2 + ' см.')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-                <p>
-                    <script>
-                        document.write(' 19. В треугольнике АВС углы А и С равны ' + bos + ' и ' + ssh + ' градусов. Найдите угол между стороной BC и биссектрисой BD.')
-                    </script>
-                </p>
-                <input autocomplete="off" placeholder="введите ответ">
-            </div>
-        </div>
-        <div class='block1'>
-            <h1>Правильные ответы</h1>
-            <p>
-                <script>
-                    document.write(' 1: '+ a)
-                </script>
-                <br>
-                <script>
-                    document.write(' 2: ' + c)
-                </script>
-                <br>
-                <script>
-                    document.write(' 3: ' + answer3)
-                </script>
-                <br>
-                <script>
-                    document.write(' 4: ' + answ)
-                </script>
-                <br>
-                <script>
-                    document.write(' 5: ' + answers5)
-                </script>
-                <br>
-                <script>
-                    document.write(' 6: ' + answers6)
-                </script>
-                <br>
-                <script>
-                    document.write(' 7: ' + answers71 + 'x^2 + ' + answers72 + 'x')
-                </script>
-                <br>
-                <script>
-                    document.write(' 8: ' + dis8)
-                </script>
-                <br>
-                <script>
-                    document.write(' 9: '+  yel + '/' + answers9)
-                </script>
-                <br>
-                <script>
-                    document.write(' 10: ' + answers10)
-                </script>
-                <br>
-                <script>
-                    document.write(' 11: ' + answers11)
-                </script>
-                <br>
-                <script>
-                    document.write(' 12: ' + 6)
-                </script>
-                <br>
-                <script>
-                    document.write(' 13: ' + answers13)
-                </script>
-                <br>
-                <script>
-                    document.write(' 14: ' + answers14)
-                </script>
-                <br>
-                <script>
-                    document.write(' 15: ' + answers15)
-                </script>
-                <br>
-                <script>
-                    document.write(' 16: ' + answers16)
-                </script>
-                <br>
-                <script>
-                    document.write(' 17: ' + answers17)
-                </script>
-                <br>
-                <script>
-                    document.write(' 18: ' + answers18)
-                </script>
-                <br>
-                <script>
-                    document.write(' 19: ' + answers19)
-                </script>
-            </p>
-        </div>
+        <p>
+            <script>
+                document.write('1. Сколько стоит первый тариф?')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write('2. За сколько рублей можно получить ' + zzz + ' минут')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write('3. Сколько в сумме минут и гигабайт в ' + question3 + ' тарифе')
+            </script>
+        </p>
+        <input id="answer2" placeholder="введите ответ">
+        <br/>
+        <br/>
+        <img src="images/2022-03-31_16-07-47.png" class=".img" align="center" width="100%" height="600px">
+        <p>
+            <script>
+                document.write(' 4. Ребёнкок весит ' + realyears + ' килограмм(а), назовите его максимальную ' + dosa + ' дозу ' + mera)
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 5. Найдите значение выражения (' + sss + '*10^' + ssz + ')*(' + ssv + '*10^' + ssz + ') и округлите до десятых')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 6. Найдите значение выражения ' + ddd + ' + ' + fff)
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 7. Упростите выражение: ' + aab + 'x * (' + bbc + 'x + ' + ccd + ')')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 8. Найдите дискриминант: x^2 + ' + lsd + 'x + ' + ssd + ' = 0')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 9. Определите вероятность того что Витя наугад возьмёт жёлтый обруч, когда жёлтых - ' + yel +', зелёных - ' + gre + ', синих - ' + blu)
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 10. Сумму градусов всех углов считают по формуле 180*(h-2), где h равен количеству сторон, какая сумма углов у многоугольника, у которого ' + sto + ' сторон(ы)')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 11. Найдите корень у ' + que)
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>                    
+            <script>
+                document.write(' 12. Ваня, Миша, Алик и Вадим ловили рыбу. Оказалось, что количества рыб, пойманных каждым из них, образуют в указанном порядке арифметическую прогрессию. Если бы Алик поймал столько же рыб, сколько Вадим, а Вадим поймал бы на 12 рыб больше, то количества рыб, пойманных юношами, образовали бы в том же порядке геометрическую прогрессию. Сколько рыб поймал Миша?')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 13. Биссектрисы углов A и B треугольника ABC пересекаются в точке O. Найдите ABO, если  A = ' + please + ',а B =' + away)
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 14. В холодильник положили предмет с температурой ' + osn + ' через минуту его достали и его температура снизилась на ' + plu + '. Какая температура у него будет через ' + min + ' минут?')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 15. В треугольнике DEF DE=DF, внешний угол при вершине F равен ' + tre + '. Найдите угол C')
+            </script>
+        </p>
+        <input autocomplete="off" autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 16. На прямой AB взята точка M. Луч MD — биссектриса угла CMB. Известно, что ∠DMC=' + help + '°. Найдите угол CMA. Ответ дайте в градусах.')
+            </script>
+        </p>
+        <input autocomplete="off" autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 17. В окружность вписан равносторонний ' + old + '-иугольник. Найдите величину угла ABC.')
+            </script>
+        </p>
+        <input autocomplete="off" autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 18. Найдите площадь треугольника ABC если у него угол A равен 90 градусов, а сторона AB = ' + str + ' см, BC = ' + str2 + ' см.')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <p>
+            <script>
+                document.write(' 19. В треугольнике АВС углы А и С равны ' + bos + ' и ' + ssh + ' градусов. Найдите угол между стороной BC и биссектрисой BD.')
+            </script>
+        </p>
+        <input autocomplete="off" placeholder="введите ответ">
+        <h1>Правильные ответы</h1>
+        <p>
+            <script>
+                document.write(' 1: '+ a)
+            </script>
+            <br>
+            <script>
+                document.write(' 2: ' + c)
+            </script>
+            <br>
+            <script>
+                document.write(' 3: ' + answer3)
+            </script>
+            <br>
+            <script>
+                document.write(' 4: ' + answ)
+            </script>
+            <br>
+            <script>
+                document.write(' 5: ' + answers5)
+            </script>
+            <br>
+            <script>
+                document.write(' 6: ' + answers6)
+            </script>
+            <br>
+            <script>
+                document.write(' 7: ' + answers71 + 'x^2 + ' + answers72 + 'x')
+            </script>
+            <br>
+            <script>
+                document.write(' 8: ' + dis8)
+            </script>
+            <br>
+            <script>
+                document.write(' 9: '+  yel + '/' + answers9)
+            </script>
+            <br>
+            <script>
+                document.write(' 10: ' + answers10)
+            </script>
+            <br>
+            <script>
+                document.write(' 11: ' + answers11)
+            </script>
+            <br>
+            <script>
+                document.write(' 12: ' + 6)
+            </script>
+            <br>
+            <script>
+                document.write(' 13: ' + answers13)
+            </script>
+            <br>
+            <script>
+                document.write(' 14: ' + answers14)
+            </script>
+            <br>
+            <script>
+                document.write(' 15: ' + answers15)
+            </script>
+            <br>
+            <script>
+                document.write(' 16: ' + answers16)
+            </script>
+            <br>
+            <script>
+                document.write(' 17: ' + answers17)
+            </script>
+            <br>
+            <script>
+                document.write(' 18: ' + answers18)
+            </script>
+            <br>
+            <script>
+                document.write(' 19: ' + answers19)
+            </script>
+        </p>
     </body>
 </html>
